[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
package= "das_unsupervised"
module = "das_unsupervised"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/janclemenslab/das_unsupervised"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
requires = ['numpy', 'scipy', 'sklearn',
            'matplotlib', 'colorcet', 'seaborn',
            'librosa', 'noisereduce', 'Pillow',
            'umap-learn<0.5', 'hdbscan']
description-file = "README.md"
